[workspace.package]
description = "The LAOS parachain node."
repository = "https://github.com/freeverseio/laos.git"
homepage = "https://www.laosfoundation.io"
authors = ["Freeverse"]
version = "0.22.0"

[workspace]
resolver = "2"

members = [
   "node",
   "runtime/*",
   "pallets/*",
   "precompiles/*",
   "primitives",
]

[workspace.dependencies]
parity-scale-codec = { version = "3.2.2", default-features = false, features = ["derive"] }
hex-literal = "0.4.1"
hex = { version = "0.4.3", default-features = false }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"
num_enum = { version = "0.7.0", default-features = false }
clap = { version = "4.2.7" }
futures = "0.3.25"
jsonrpsee = { version = "0.22.5" }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.163", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
similar-asserts = { version = "1.1.0" }
serde_json = { version = "1.0.104", default-features = true }
rustc-hex = { version = "2.1", default-features = false }

# Wasm builder
substrate-wasm-builder = { path = "/home/carla/dev/magecnion/polkadot-sdk" }

# Substrate
# (wasm)
sp-core = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/core", default-features = false }
sp-io = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-runtime = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/runtime", default-features = false }
sp-staking = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-std = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-api = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/api", default-features = false }
sp-block-builder = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/block-builder", default-features = false }
sp-consensus-aura = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/consensus/aura", default-features = false }
sp-inherents = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/inherents", default-features = false }
sp-offchain = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-session = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-transaction-pool = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-version = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-arithmetic = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-externalities = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-consensus-grandpa = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-keyring = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-state-machine = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-consensus-slots = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-weights ={ path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
sp-genesis-builder ={ path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }

# (native)
sp-blockchain = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/blockchain" }
sp-consensus = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sp-keystore = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/keystore" }
sp-timestamp = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/primitives/timestamp" }
sp-trie = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-basic-authorship = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/basic-authorship" }
sc-chain-spec = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/chain-spec" }
sc-client-api = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/api" }
sc-client-db = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-consensus = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/consensus/common" }
sc-consensus-aura = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/consensus/aura" }
sc-executor = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/executor" }
sc-network = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/network" }
sc-network-sync = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/network/sync" }
sc-network-common = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-offchain = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/offchain" }
sc-rpc = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/rpc" }
sc-sysinfo = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/sysinfo" }
sc-service = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/service" }
sc-telemetry = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/telemetry" }
sc-tracing = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/tracing" }
sc-transaction-pool = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/transaction-pool/api" }
sc-utils = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-consensus-grandpa = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-consensus-grandpa-rpc = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-keystore = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
sc-rpc-api = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
substrate-prometheus-endpoint = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/utils/prometheus" }
pallet-transaction-payment-rpc = { path = "/home/carla/dev/magecnion/polkadot-sdk/polkadot/rpc" }
substrate-frame-rpc-system = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/utils/frame/rpc/system" }
sc-cli = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/client/cli" }
frame-benchmarking-cli = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/utils/frame/benchmarking-cli" }

substrate-build-script-utils = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/utils/build-script-utils" }

# Substrate pallets
# (wasm)
pallet-assets = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-balances = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/balances", default-features = false }
pallet-message-queue = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-utility = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
frame-support = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/support", default-features = false }
frame-system = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/system", default-features = false }
frame-executive = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/executive", default-features = false }
frame-system-rpc-runtime-api = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/system/rpc/runtime-api", default-features = false }
pallet-aura = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/aura", default-features = false }
pallet-authorship = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/authorship", default-features = false }
pallet-session = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false, features = ["historical"] }
pallet-scheduler = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-sudo = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-multisig = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-timestamp = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-identity = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/identity", default-features = false }
pallet-democracy = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/democracy", default-features = false }
pallet-elections-phragmen = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/elections-phragmen", default-features = false }
pallet-treasury = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-collective = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/collective", default-features = false }
pallet-membership = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/membership", default-features = false }
pallet-transaction-payment = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-preimage = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-vesting = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-proxy = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
frame-benchmarking = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/benchmarking", default-features = false }
frame-system-benchmarking = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/system/benchmarking", default-features = false }
frame-try-runtime = { path = "/home/carla/dev/magecnion/polkadot-sdk/substrate/frame/try-runtime", default-features = false }

# EVM & Ethereum
# (wasm)
# To make it compatible with frontier
evm = { version = "0.41.1", default-features = false }
ethereum = { version = "0.15.0", default-features = false }

# Frontier
# (wasm)
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-hotfix-sufficients = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-account = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }

# Utils
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }

# Frontier
# (native)
fc-api = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-cli = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }

# Cumulus
# (wasm)
cumulus-pallet-aura-ext = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/pallets/aura-ext", default-features = false }
cumulus-pallet-parachain-system = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/pallets/parachain-system", default-features = false, features = ["parameterized-consensus-hook"]}
cumulus-pallet-xcmp-queue = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/pallets/xcmp-queue", default-features = false }
cumulus-pallet-session-benchmarking = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/pallets/session-benchmarking", default-features = false }
cumulus-primitives-core = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/primitives/timestamp", default-features = false }
cumulus-primitives-utility = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/primitives/utility", default-features = false }
cumulus-primitives-parachain-inherent = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/primitives/parachain-inherent", default-features = false }
cumulus-test-relay-sproof-builder = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/test/relay-sproof-builder", default-features = false }
staging-parachain-info = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
parachains-common = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/parachains/common", default-features = false }

# (native)
cumulus-client-cli = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/cli" }
cumulus-client-collator = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/collator" }
cumulus-client-consensus-aura = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/consensus/aura" }
cumulus-client-consensus-common = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/consensus/common" }
cumulus-client-consensus-relay-chain = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/consensus/relay-chain" }
cumulus-client-network = { path = "/home/carla/dev/magecnion/polkadot-sdk" }
cumulus-client-consensus-proposer = {path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/consensus/proposer"}
cumulus-client-service = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/service" }
cumulus-relay-chain-interface = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/client/relay-chain-interface" }

# Polkadot
# (wasm)
polkadot-parachain-primitives = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
polkadot-primitives = { path = "/home/carla/dev/magecnion/polkadot-sdk/polkadot/primitives", default-features = false }
polkadot-runtime-common = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
polkadot-core-primitives = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
polkadot-runtime-parachains = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
pallet-xcm = { path = "/home/carla/dev/magecnion/polkadot-sdk",  default-features = false }

# Temporary, to ensure `runtime-benchmarks` features can compile
polkadot-runtime = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }

# XCM
# (wasm)
cumulus-pallet-xcm = { path = "/home/carla/dev/magecnion/polkadot-sdk/cumulus/pallets/xcm", default-features = false }
staging-xcm = { path = "/home/carla/dev/magecnion/polkadot-sdk/polkadot/xcm", default-features = false }
staging-xcm-builder = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }
staging-xcm-executor = { path = "/home/carla/dev/magecnion/polkadot-sdk", default-features = false }

# (native)
polkadot-cli = { path = "/home/carla/dev/magecnion/polkadot-sdk/polkadot/cli" }
polkadot-service = { path = "/home/carla/dev/magecnion/polkadot-sdk/polkadot/node/service" }

# Orml
# (wasm)
# TODO This code has been commented out when upgrading polkadot-sdk from v1.1.0 to 1.6.0
# because conflicts with orml-trait crate and currently XCM is not used. It should be
# uncommented and fixed when XCM is used in the runtime.
# orml-traits = { version = "0.7.0", default-features = false }
# orml-xcm-support = { version = "0.7.0", default-features = false }
# orml-xtokens = { version = "0.7.0", default-features = false }

# Other pallets
# (wasm)
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
derive_more = "0.99"

# LAOS pallets
pallet-laos-evolution = { path = "./pallets/laos-evolution", default-features = false }
pallet-asset-metadata-extender = { path = "./pallets/asset-metadata-extender", default-features = false }
pallet-parachain-staking = { path = "./pallets/parachain-staking", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "./precompiles/parachain-staking", default-features = false }
pallet-precompiles-benchmark = { path = "./pallets/precompiles-benchmark", default-features = false}

# Primitives
laos-primitives = { path = "./primitives", default-features = false }
test-utils = { path = "./utils/test", default-features = false }

# runtime
laos-runtime = { path = "./runtime/laos", default-features = false }
